# C-based-image-Resizer-Web-Server-using-OpenCV

./: CMakeLists.txt  Dockerfile  main.cpp  readme.md
